# classification-tflite

./: Dockerfile  README.md  pyproject.toml  setup.py
.github/actions/: build_docker_image.yaml
.github/actions/build_docker_image/: action.yaml
.github/actions/deploy/: action.yaml
.github/actions/module_upload/: action.yaml
.github/workflows/: build-test-ml-container.yml  main.yaml  pull_request.yaml
model/: training.py
scripts/: test.sh
tests/: test_file_exists.py  test_label_change.py  test_parse_args.py
