[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
keras = "2.11.0"
keras-cv = "0.5.0"
keras-preprocessing = "1.1.2"
google-cloud-storage = "^2.17.0"
google-cloud-aiplatform = "^1.59.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"